--- a/styles/style.css
+++ b/styles/style.css
@@ -4,4 +4,62 @@
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
+}
+
+.main-container {
+  border: double 2px blueviolet;
+  height: 100vh;
+  width: 100%;
+  display: grid;
+  grid-template-areas: "h" "m" "f";
+}
+
+.header {
+  border: solid 1px green;
+  grid-area: "h";
+  width: 100%;
+  display: inline-block;
+}
+
+.main {
+  grid-area: "m";
+}
+
+.footer {
+  grid-area: "f";
+}
+
+.nav {
+  border: solid 1px red;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.hamburger {
+  position: fixed;
+  content: "";
+  border: solid 1px orangered;
+  height: 50px;
+  width: 50px;
+}
+
+.top-line {
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  background-color: black;
+}
+
+.bottom-line {
+  width: 20px;
+  height: 2px;
+  background-color: black;
+}
+
+.nav-list {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  visibility: hidden;
 }/*# sourceMappingURL=style.css.map */
