--- a/styles/style.css
+++ b/styles/style.css
@@ -4,10 +4,23 @@
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
+  color: var(--fontColor);
+  --bodyColor: #fff;
+  --fontColor: #000;
+}
+
+a {
+  text-decoration: none;
+  color: var(--fontColor);
+}
+
+body {
+  background-color: #3f3e3f;
+  padding: 1rem;
 }
 
 .main-container {
-  border: double 2px blueviolet;
+  background-color: var(--bodyColor);
   height: 100vh;
   width: 100%;
   display: grid;
@@ -15,10 +28,9 @@
 }
 
 .header {
-  border: solid 1px green;
   grid-area: "h";
   width: 100%;
-  display: inline-block;
+  height: 20vh;
 }
 
 .main {
@@ -30,36 +42,45 @@
 }
 
 .nav {
-  border: solid 1px red;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 55px;
 }
 
 .hamburger {
   position: fixed;
-  content: "";
-  border: solid 1px orangered;
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
 }
 
 .top-line {
   position: absolute;
-  width: 20px;
+  top: 8px;
+  width: 100%;
   height: 2px;
   background-color: black;
 }
 
 .bottom-line {
-  width: 20px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
   height: 2px;
   background-color: black;
 }
 
 .nav-list {
-  border: 1px solid black;
   display: flex;
   flex-direction: row;
-  visibility: hidden;
+  width: 100%;
+  justify-content: center;
+}
+
+.nav-item {
+  padding: 0 2rem;
+  width: 33%;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
