--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,8 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   color: var(--fontColor);
-  --bodyColor: #fff;
-  --fontColor: #000;
+  --bodyColor: rgb(1, 84, 41);
+  --fontColor: rgb(255, 255, 255);
 }
 
 a {
@@ -15,14 +15,13 @@ a {
 }
 
 body {
-  background-color: #3f3e3f;
-  padding: 1rem;
+  background-color: #022512;
 }
 
 .main-container {
   background-color: var(--bodyColor);
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: grid;
   grid-template-areas: "h" "m" "f";
 }
@@ -35,6 +34,15 @@ body {
 
 .main {
   grid-area: "m";
+}
+
+.main-img {
+  width: 100%;
+}
+
+.work-room {
+  width: 100%;
+  margin-top: 10rem;
 }
 
 .footer {
@@ -50,7 +58,8 @@ body {
 }
 
 .hamburger {
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   height: 30px;
   width: 30px;
   cursor: pointer;
