--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,16 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   color: var(--fontColor);
-  --bodyColor: rgb(1, 84, 41);
+  --bodyColor: #fff;
   --fontColor: rgb(255, 255, 255);
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #0c221a;
 }
 
 a {
@@ -14,35 +18,34 @@ a {
   color: var(--fontColor);
 }
 
-body {
-  background-color: #022512;
+p {
+  padding: 0 2rem;
 }
 
 .main-container {
-  background-color: var(--bodyColor);
+  margin: 10px;
+  padding: 0;
+  background-color: #0c221a;
   height: 100vh;
-  width: 100vw;
+  width: 95vw;
   display: grid;
   grid-template-areas: "h" "m" "f";
 }
 
 .header {
   grid-area: "h";
-  width: 100%;
-  height: 20vh;
 }
 
 .main {
   grid-area: "m";
 }
 
-.main-img {
-  width: 100%;
-}
-
 .work-room {
+  display: flex;
   width: 100%;
-  margin-top: 10rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  padding: 1rem;
 }
 
 .footer {
@@ -50,46 +53,53 @@ body {
 }
 
 .nav {
+  z-index: 0;
+  position: -webkit-sticky;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 55px;
+  margin-bottom: 4rem;
 }
 
 .hamburger {
-  position: -webkit-sticky;
-  position: sticky;
-  height: 30px;
-  width: 30px;
+  z-index: 2;
+  position: absolute;
+  margin-top: 3rem;
+  height: 2rem;
+  width: 2rem;
   cursor: pointer;
+  margin-bottom: 3rem;
 }
 
 .top-line {
   position: absolute;
   top: 8px;
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 4px;
+  background-color: #fff;
 }
 
 .bottom-line {
   position: absolute;
   bottom: 8px;
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 4px;
+  background-color: #fff;
 }
 
 .nav-list {
-  display: flex;
+  z-index: 1;
+  border: 1px solid black;
+  display: none;
   flex-direction: row;
   width: 100%;
   justify-content: center;
 }
 
 .nav-item {
-  padding: 0 2rem;
+  padding: 0 1rem;
   width: 33%;
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
