--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,35 +1,42 @@
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   color: var(--fontColor);
 
   // COLORS CUSTOM PROPERTIES :
-  --bodyColor: rgb(1, 84, 41);
+  --bodyColor: #fff;
 
   --fontColor: rgb(255, 255, 255);
 }
 
 //------GENERAL
 
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #0c221a;
+}
+
 a {
   text-decoration: none;
   color: var(--fontColor);
 }
 
-//------DISPLAY
-
-body {
-  background-color: #022512;
+p {
+  padding: 0 2rem;
 }
 
+//------DISPLAY
+
 .main-container {
-  background-color: var(--bodyColor);
+  margin: 10px;
+  padding: 0;
+  background-color: #0c221a;
   // border: double 2px blueviolet;
   height: 100vh;
-  width: 100vw;
+  width: 95vw;
   //Layout
   display: grid;
   grid-template-areas:
@@ -41,22 +48,20 @@ body {
 .header {
   // border: solid 1px green;
   grid-area: "h";
-  width: 100%;
-  height: 20vh;
+  // height: 20vh;
 }
 
 .main {
   grid-area: "m";
 }
 
-.main-img {
-  // border: solid 1px red;
-  width: 100%;
-}
-
 .work-room {
+  // border: 1px solid blue;
+  display: flex;
   width: 100%;
-  margin-top: 10rem;
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  padding: 1rem;
 }
 
 .footer {
@@ -66,52 +71,60 @@ body {
 // -----------NAVIGATION
 
 .nav {
+  z-index: 0;
+  position: sticky;
   // border: solid 1px red;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 55px;
+  margin-bottom: 4rem;
 }
 
 .hamburger {
-  position: sticky;
-  // border: solid 1px orangered;
-  height: 30px;
-  width: 30px;
+  z-index: 2;
+  position: absolute;
+  margin-top: 3rem;
+  height: 2rem;
+  width: 2rem;
   cursor: pointer;
+  margin-bottom: 3rem;
 }
 
 .top-line {
   position: absolute;
   top: 8px;
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 4px;
+  background-color: #fff;
 }
 
 .bottom-line {
   position: absolute;
   bottom: 8px;
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 4px;
+  background-color: #fff;
 }
 
 // NAVIGATION ON CLICK HAMBURGER MOBILE + DESKTOP
 
 .nav-list {
-  // border: 1px solid black;
-  display: flex;
+  z-index: 1;
+  border: 1px solid black;
+  display: none;
   flex-direction: row;
   width: 100%;
   justify-content: center;
-  // visibility: hidden;
 }
 
 .nav-item {
   // border: solid 1px brown;
-  padding: 0 2rem;
+  padding: 0 1rem;
   width: 33%;
   text-align: center;
 }
+
+//---HAMBURGER-ANIM---------
+
+//-------------TABLET---760px---------
