--- a/styles/style.css
+++ b/styles/style.css
@@ -55,14 +55,12 @@ p {
 .nav {
   transition: 0.6s ease;
   z-index: 0;
-  position: fixed;
+  position: relative;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 6rem;
-  padding-right: 2rem;
-  transform: translateY(-2rem);
+  transform: translateY(0);
   background-color: #0c221a;
 }
 
@@ -71,12 +69,11 @@ p {
   z-index: 0;
   position: fixed;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 4rem;
-  padding-right: 2rem;
-  transform: translateY(-35rem);
+  top: 0;
+  transform: translateY(0);
 }
 
 .hamburger {
@@ -109,7 +106,7 @@ p {
 .nav-list {
   z-index: 1;
   border: 1px solid black;
-  display: none;
+  visibility: hidden;
   flex-direction: row;
   width: 100%;
   justify-content: center;
