--- a/styles/style.scss
+++ b/styles/style.scss
@@ -71,29 +71,32 @@ p {
 // -----------NAVIGATION
 
 .nav {
+  // border: solid 1px red;
   transition: 0.6s ease;
   z-index: 0;
-  position: fixed;
+  position: relative;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 6rem;
-  padding-right: 2rem;
-  transform: translateY(-2rem);
+  transform: translateY(0);
+  // margin-bottom: 10rem;
+  // padding-right: 2rem;
+  // top: 0;
   background-color: #0c221a;
 }
+//TODO fix hamburger height on @media screen > 600px
 .navTopAnimation {
   transition: 0.6s ease;
   z-index: 0;
   position: fixed;
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  margin-bottom: 4rem;
-  padding-right: 2rem;
-  transform: translateY(-35rem);
+  top: 0;
+  transform: translateY(0);
+  // top: 0;
 }
 
 .hamburger {
@@ -124,11 +127,13 @@ p {
 }
 
 // NAVIGATION ON CLICK HAMBURGER MOBILE + DESKTOP
+//TODO SET THE ANIMATION HAMBURGER ON CLICK
+//TODO SET NAV ITEMS DISPLAY ON CLICK
 
 .nav-list {
   z-index: 1;
   border: 1px solid black;
-  display: none;
+  visibility: hidden;
   flex-direction: row;
   width: 100%;
   justify-content: center;
