--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@ p {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 6rem;
   transform: translateY(0);
   background-color: #0c221a;
 }
