--- a/styles/style.scss
+++ b/styles/style.scss
@@ -79,6 +79,7 @@ p {
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 6rem;
   transform: translateY(0);
   // margin-bottom: 10rem;
   // padding-right: 2rem;
