--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
   color: var(--fontColor);
   --bodyColor: #fff;
   --fontColor: rgb(255, 255, 255);
+  --sizeMainPic: clamp(min(16rem), 80vw, max(40vw));
+  --sizeTitles: clamp(min(2rem), 3rem, max(25rem));
 }
 
 body {
@@ -34,26 +36,36 @@ a {
 
 .main {
   grid-area: "m";
+  margin-top: 4rem;
 }
 
 .deskPicContainer {
-  border: solid 1px red;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
 }
 
 .work-room {
   display: flex;
-  width: 16rem;
+  width: var(--sizeMainPic);
 }
 
 .footer {
   grid-area: "f";
 }
 
+h1 {
+  transition: 0.4s ease;
+  text-align: center;
+  font-size: var(--sizeTitles);
+  margin: 2rem;
+}
+
 .nav {
-  transition: 0.6s ease;
+  transition: 0.2s ease;
   z-index: 0;
   position: relative;
   display: flex;
@@ -61,20 +73,22 @@ a {
   align-items: center;
   width: 100%;
   height: 6rem;
-  transform: translateY(0);
-  background-color: #0c221a;
+  transform: translateY(1px);
+  opacity: 1;
 }
 
 .navTopAnimation {
-  transition: 0.6s ease;
+  transition: 0.2s ease-in;
   z-index: 0;
   position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  top: 0;
-  transform: translateY(0);
+  height: 6rem;
+  transform: translateY(-24rem);
+  background-color: #0c221a;
+  border-bottom: solid 1px #173f31;
 }
 
 .hamburger {
