--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   color: var(--fontColor);
@@ -25,31 +27,38 @@ a {
   padding: 0;
   background-color: #0c221a;
   height: 100vh;
-  width: 95vw;
+  width: 100vw;
   display: grid;
   grid-template-areas: "h" "m" "f";
 }
 
 .header {
   grid-area: "h";
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .main {
   grid-area: "m";
+  width: 100vw;
   margin-top: 4rem;
+  padding: 0;
 }
 
 .deskPicContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
 
 .work-room {
   display: flex;
+  padding: 0;
+  margin: 0;
   width: var(--sizeMainPic);
 }
 
