--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -14,6 +13,7 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
   background-color: #0c221a;
 }
 
@@ -23,34 +23,25 @@ a {
 }
 
 .main-container {
-  margin: 0;
-  padding: 0;
   background-color: #0c221a;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-template-areas: "h" "m" "f";
 }
 
 .header {
   grid-area: "h";
-  width: 100%;
-  padding: 0;
-  margin: 0;
 }
 
-.main {
+main {
   grid-area: "m";
-  width: 100vw;
-  margin-top: 4rem;
-  padding: 0;
 }
 
 .deskPicContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   margin-top: 4rem;
   margin-bottom: 4rem;
 }
@@ -64,6 +55,7 @@ a {
 
 .footer {
   grid-area: "f";
+  width: 100%;
 }
 
 h1 {
