--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
-  color: var(--fontColor);
   --bodyColor: #fff;
   --fontColor: rgb(255, 255, 255);
   --sizeMainPic: clamp(min(16rem), 80vw, max(40vw));
@@ -22,8 +21,12 @@ body {
 }
 
 a {
+  z-index: 3;
   text-decoration: none;
-  color: var(--fontColor);
+}
+
+a:visited {
+  color: white;
 }
 
 .main-container {
@@ -43,17 +46,18 @@ main {
 }
 
 .deskPicContainer {
+  z-index: -20;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 8rem;
   margin-bottom: 4rem;
 }
 
 .work-room {
-  display: flex;
+  display: block;
   padding: 0;
-  margin: 0;
+  margin-top: 2rem;
   width: var(--sizeMainPic);
 }
 
@@ -73,206 +77,121 @@ h1 {
 }
 
 .nav {
-  transition: 0.2s ease;
-  z-index: 0;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 6rem;
-  transform: translateY(1px);
-  opacity: 1;
-}
-
-.navTopAnimation {
-  transition: 0.2s ease-in;
-  z-index: 0;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 6rem;
-  transform: translateY(-24rem);
+  z-index: 10;
   background-color: #0c221a;
-  border-bottom: solid 1px #173f31;
-}
-
-.top-line {
-  position: absolute;
-  top: 2.5rem;
-  left: 45%;
-  width: 2rem;
-  height: 4px;
-  background-color: #fff;
-}
-
-.top-line-anim::after {
-  content: "";
-  z-index: 2;
-  position: absolute;
-  width: 2rem;
-  height: 10px;
-  top: 10px;
-  background-color: red;
-}
-
-.bottom-line {
-  position: absolute;
-  bottom: 8px;
-  right: 55%;
-  width: 2rem;
-  height: 4px;
-  background-color: #fff;
-}
-
-.bottom-line-anim::after {
-  content: "";
-  z-index: 2;
-  position: absolute;
-  width: 2rem;
-  height: 10px;
-  top: 10px;
-  background-color: red;
-}
-
-.top-line-anim {
-  position: absolute;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-name: "topLine";
-          animation-name: "topLine";
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-.top-line-anim .top-line-anim::after {
-  content: "";
-  position: absolute;
-  width: 2rem;
-  height: 10px;
-  top: 10px;
-  background-color: red;
-}
-
-.bottom-line-anim {
-  position: absolute;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-name: "bottomLine";
-          animation-name: "bottomLine";
-  -webkit-animation-direction: normal;
-          animation-direction: normal;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-}
-
-@-webkit-keyframes topLine {
-  0% {
-    top: 2.5rem;
-    left: 45%;
-    width: 2rem;
-  }
-  50% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  65% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  100% {
-    top: 3.8rem;
-    left: 96%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-}
-
-@keyframes topLine {
-  0% {
-    top: 2.5rem;
-    left: 45%;
-    width: 2rem;
-  }
-  50% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  65% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  100% {
-    top: 3.8rem;
-    left: 96%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-}
-@-webkit-keyframes bottomLine {
-  0% {
-    bottom: 8px;
-    left: 45%;
-    width: 2rem;
-  }
-  50% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  65% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  100% {
-    left: 1%;
-    rotate: 90deg;
-    bottom: 4rem;
-    width: 8rem;
-  }
-}
-@keyframes bottomLine {
-  0% {
-    bottom: 8px;
-    left: 45%;
-    width: 2rem;
-  }
-  50% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  65% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  100% {
-    left: 1%;
-    rotate: 90deg;
-    bottom: 4rem;
-    width: 8rem;
-  }
-}
-.nav-list {
-  z-index: 1;
-  border: 1px solid black;
-  visibility: hidden;
+  display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  height: 4.5rem;
   width: 100%;
+  position: fixed;
+  padding-top: 1rem;
+  box-shadow: 2px 3px 12px 3px black;
+}
+
+.logo {
+  background-color: #0c221a;
+  width: 4rem;
+  height: 4rem;
+}
+
+.logo > img {
+  width: 100%;
+}
+
+.hamburger {
+  transition: 0.3s ease;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  display: flex;
   justify-content: center;
+  align-items: center;
+}
+.hamburger .top-line {
+  transition: 0.3s ease;
+  height: 4px;
+  width: 2rem;
+  background-color: #fff;
+  transform: translate(1rem, -0.5rem);
+  rotate: 0;
+}
+.hamburger .bottom-line {
+  transition: 0.3s ease;
+  height: 4px;
+  width: 2rem;
+  background-color: #fff;
+  transform: translate(-1rem, 0.5rem);
+  rotate: 0;
+}
+
+.ham-anim {
+  transition: 0.3s ease;
+  background-color: #091812;
+  border: 0.6px solid rgb(115, 104, 76);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ham-anim .top-line {
+  transition: 0.3s ease;
+  height: 4px;
+  width: 2rem;
+  background-color: #fff;
+  transform: translate(0.7rem, -0.7rem);
+  rotate: z 45deg;
+}
+.ham-anim .bottom-line {
+  transition: 0.3s ease;
+  height: 4px;
+  width: 2rem;
+  background-color: #fff;
+  transform: translate(-0.7rem, -0.7rem);
+  rotate: z -45deg;
+}
+
+.nav-list {
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  visibility: hidden;
+  background-color: #091812;
+  border: solid 0.3px rgba(255, 255, 255, 0);
+  border-radius: 4px;
+  transition: 1s ease-out;
+  width: 100%;
+  height: 0;
+  top: 5.5rem;
+}
+
+.nav-list-toggle {
+  z-index: -2;
+  position: absolute;
+  visibility: visible;
+  background-color: #091812;
+  border: solid 0.1px rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: 1s ease;
+  width: 100%;
+  height: 3rem;
+  top: 5.5rem;
 }
 
 .nav-item {
-  padding: 0 1rem;
-  width: 33%;
+  width: 3rem;
+  z-index: -50;
+  transition: 0.1s ease;
   text-align: center;
+  color: rgba(0, 169, 101, 0);
+  text-decoration: none;
+}
+
+.nav-item-toggle {
+  z-index: -2;
+  transition: 0.1s ease-in;
+  text-align: center;
+  color: rgb(255, 255, 255);
 }/*# sourceMappingURL=style.css.map */
