--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,7 +6,6 @@
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
-  color: var(--fontColor);
 
   // COLORS CUSTOM PROPERTIES :
   --bodyColor: #fff;
@@ -33,8 +32,12 @@ body {
 }
 
 a {
+  z-index: 3;
   text-decoration: none;
-  color: var(--fontColor);
+}
+
+a:visited {
+  color: white;
 }
 
 //------DISPLAY
@@ -60,17 +63,18 @@ main {
 }
 
 .deskPicContainer {
+  z-index: -20;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 8rem;
   margin-bottom: 4rem;
 }
 
 .work-room {
-  display: flex;
+  display: block;
   padding: 0;
-  margin: 0;
+  margin-top: 2rem;
   width: var(--sizeMainPic);
 }
 
@@ -94,163 +98,78 @@ h1 {
 // -----------NAVIGATION
 
 .nav {
-  transition: 0.2s ease;
-  z-index: 0;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 6rem;
-  transform: translateY(1px);
-  opacity: 1;
-}
-//TODO fix hamburger height on @media screen > 600px
-.navTopAnimation {
-  transition: 0.2s ease-in;
-  z-index: 0;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 6rem;
-  // top: 0;
-  transform: translateY(-24rem);
+  z-index: 10;
   background-color: #0c221a;
-  border-bottom: solid 1px #173f31;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 4.5rem;
+  width: 100%;
+  position: fixed;
+  padding-top: 1rem;
+  box-shadow: 2px 3px 12px 3px black;
 }
 
-// .hamburger {
-//   transition: 0.6s ease;
-//   z-index: 2;
-//   position: absolute;
-//   margin-top: 3rem;
-//   height: 8rem;
-//   width: 100%;
-//   cursor: pointer;
-//   margin-bottom: 3rem;
-// }
-
-.top-line {
-  position: absolute;
-
-  top: 2.5rem;
-  left: 45%;
-  width: 2rem;
-  height: 4px;
-  background-color: #fff;
-  // animation-duration: 1s;
-  // animation-name: "topLine";
-  // animation-direction: normal;
-  // animation-fill-mode: forwards;
+.logo {
+  background-color: #0c221a;
+  width: 4rem;
+  height: 4rem;
 }
 
-.top-line-anim::after {
-  content: "";
-  z-index: 2;
-  position: absolute;
-  width: 2rem;
-  height: 10px;
-  top: 10px;
-  background-color: red;
+.logo > img {
+  width: 100%;
 }
 
-.bottom-line {
-  position: absolute;
-  bottom: 8px;
-  right: 55%;
-  width: 2rem;
-  height: 4px;
-  background-color: #fff;
-}
-
-.bottom-line-anim::after {
-  content: "";
-  z-index: 2;
-  position: absolute;
-  width: 2rem;
-  height: 10px;
-  top: 10px;
-  background-color: red;
-}
-
-//=====HAM ANIMATION ON CLICK=========
-
-.top-line-anim {
-  position: absolute;
-  animation-duration: 1s;
-  animation-name: "topLine";
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-  .top-line-anim::after {
-    content: "";
-    position: absolute;
+.hamburger {
+  transition: 0.3s ease;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .top-line {
+    transition: 0.3s ease;
+    height: 4px;
     width: 2rem;
-    height: 10px;
-    top: 10px;
-    background-color: red;
+    background-color: #fff;
+    transform: translate(1rem, -0.5rem);
+    rotate: 0;
   }
-}
-
-.bottom-line-anim {
-  position: absolute;
-  animation-duration: 1s;
-  animation-name: "bottomLine";
-  animation-direction: normal;
-  animation-fill-mode: forwards;
-}
-
-@keyframes topLine {
-  0% {
-    top: 2.5rem;
-    left: 45%;
+  .bottom-line {
+    transition: 0.3s ease;
+    height: 4px;
     width: 2rem;
-  }
-
-  50% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-
-  65% {
-    left: 50%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-
-  100% {
-    top: 3.8rem;
-    left: 96%;
-    rotate: 90deg;
-    width: 8rem;
+    background-color: #fff;
+    transform: translate(-1rem, 0.5rem);
+    rotate: 0;
   }
 }
 
-@keyframes bottomLine {
-  0% {
-    bottom: 8px;
-    left: 45%;
+.ham-anim {
+  transition: 0.3s ease;
+  background-color: #091812;
+  border: 0.6px solid rgb(115, 104, 76);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // transform: translateX(2rem);
+  .top-line {
+    transition: 0.3s ease;
+    height: 4px;
     width: 2rem;
+    background-color: #fff;
+    transform: translate(0.7rem, -0.7rem);
+    rotate: z 45deg;
   }
-
-  50% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-  65% {
-    left: 40%;
-    rotate: 90deg;
-    width: 8rem;
-  }
-
-  100% {
-    left: 1%;
-    rotate: 90deg;
-    bottom: 4rem;
-    width: 8rem;
+  .bottom-line {
+    transition: 0.3s ease;
+    height: 4px;
+    width: 2rem;
+    background-color: #fff;
+    transform: translate(-0.7rem, -0.7rem);
+    rotate: z -45deg;
   }
 }
 
@@ -259,19 +178,48 @@ h1 {
 //TODO SET NAV ITEMS DISPLAY ON CLICK
 
 .nav-list {
-  z-index: 1;
-  border: 1px solid black;
+  z-index: 2;
+  position: absolute;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
   visibility: hidden;
-  flex-direction: row;
+  background-color: #091812;
+  border: solid 0.3px rgba(255, 255, 255, 0);
+  border-radius: 4px;
+  transition: 1s ease-out;
   width: 100%;
-  justify-content: center;
+  height: 0;
+  top: 5.5rem;
+}
+
+.nav-list-toggle {
+  z-index: -2;
+  position: absolute;
+  visibility: visible;
+  background-color: #091812;
+  border: solid 0.1px rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: 1s ease;
+  width: 100%;
+  height: 3rem;
+  top: 5.5rem;
 }
 
 .nav-item {
-  // border: solid 1px brown;
-  padding: 0 1rem;
-  width: 33%;
+  width: 3rem;
+  z-index: -50;
+  transition: 0.1s ease;
   text-align: center;
+  color: #00a96500;
+  text-decoration: none;
+}
+
+.nav-item-toggle {
+  z-index: -2;
+  transition: 0.1s ease-in;
+  text-align: center;
+  color: rgb(255, 255, 255);
 }
 
 //---HAMBURGER-ANIM---------
